Add query params documentation
